# YOLOv5_ByteTrack_Multithreading_TensorRT

./: .gitignore  LICENSE  README.md  demo.py  ji_alg.py  prepare_environment.sh  tmp.sh  环境配置以及导出模型.md
colab/: YOLOv5_ByteTrack_Multithreading_TensorRT.ipynb
yolobytedxc2_6/: CMakeLists.txt  convert_yolov5.sh
yolobytedxc2_6/include/: BYTETracker.h  common.hpp  dataType.h  utils.h  yolobyteapi.h  yololayer.h  yolov5_lib.h
yolobytedxc2_6/src/: BYTETracker.cpp  yolobyteapi.cpp  yolobyteapi.i  yolov5_lib.cpp
yolov5/: __init__.py  train.py
yolov5/models/: common.py  experimental.py  yolo.py
yolov5/utils/: __init__.py  augmentations.py  autoanchor.py  dataloaders.py  downloads.py  general.py  metrics.py  plots.py  torch_utils.py
yolov5/utils/loggers/: __init__.py
yolov5/utils/segment/: general.py
yolov5_cpp_6/: CMakeLists.txt  gpu.sh  yolov5.cpp
